修复需要JDK才能使用的bug